feat: add reset button

--- a/popup.html
+++ b/popup.html
@@ -8,11 +8,13 @@
   </head>
   <body>
     <div class="header">
-      <p class="brand">Collected Points Ranking</p>
+      <p class="brand">Top 5</p>
       <img class="icon" src="./icon.png" alt="Icon" />
     </div>
 
     <div class="container"></div>
-    <script src="popup.js"></script>
+
+    <button class="reset">Reset</button>
+    <script type="module" src="popup.js"></script>
   </body>
 </html>
