--- a/src/client/popup.html
+++ b/src/client/popup.html
@@ -9,7 +9,7 @@
   <body>
     <div class="header">
       <p class="brand">Top 5</p>
-      <img class="icon" src="./icon.png" alt="Icon" />
+      <img class="icon" src="../assets/icon.png" alt="Icon" />
     </div>
 
     <div class="container"></div>
